syntax = "proto3";

import "dark_mode.proto";

option java_package = "com.keisardev.moviesandbeyond.core.local.proto";
option java_multiple_files = true;

message UserPreferences {
  bool useDynamicColor = 1;
  DarkMode darkMode = 2;
  bool includeAdultResults = 3;
  bool useLocalOnly = 5;
  bool hideOnboarding = 8;
  string seedColor = 9;
  int64 customColorArgb = 10;

  // Next available number = 11
}